<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical" >

                <Spinner
                    android:id="@+id/spinner_GameType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView" />

                <EditText
                    android:id="@+id/inputDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/inputDate"
                    android:inputType="date" 
                android:onClick="showDatePickerDialog" />

                <EditText
                    android:id="@+id/inputTimeStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/inputTimeStart"
                    android:inputType="number" />
                <!-- android:onClick="showTimePickerDialog" /> -->

                <EditText
                    android:id="@+id/inputTimeEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/inputTimeEnd"
                    android:inputType="number" />
                <!-- android:onClick="showTimePickerDialog" /> -->

                <Spinner
                    android:id="@+id/spinner_Location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView" />

<!--                 <EditText -->
<!--                     android:id="@+id/inputMapLat" -->
<!--                     android:layout_width="match_parent" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:layout_marginTop="5dp" -->
<!--                     android:ems="10" -->
<!--                     android:hint="@string/inputMapLat" -->
<!--                     android:inputType="number" /> -->

<!--                 <EditText -->
<!--                     android:id="@+id/inputMapLng" -->
<!--                     android:layout_width="match_parent" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:layout_marginTop="5dp" -->
<!--                     android:ems="10" -->
<!--                     android:hint="@string/inputMapLng" -->
<!--                     android:inputType="number" /> -->

                <EditText
                    android:id="@+id/inputMinPlayers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/inputMinPlayers"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/inputMaxPlayers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/inputMaxPlayers"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/inputCurrentPlayers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/inputCurrentPlayers"
                    android:inputType="number" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="AddGameToDatabase"
                android:text="Add Game" />
        </TableRow>
    </TableLayout>

</ScrollView>